Fix elastic search query and add pre-wrap to message

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -98,7 +98,8 @@ html,body {
 }
 
 .message {
-	color: #B0B0B0;
+    color: #B0B0B0;
+    white-space: pre-wrap;
 }
 
 .flex-container-search {
